Move js to separate file

--- a/color-picker.html
+++ b/color-picker.html
@@ -14,12 +14,6 @@
         <h1>Color Picker</h1>
         <div id="gradient" onclick="showLocation(event)"></div>
         <div id="coordinates"></div>
-        <script>
-            function showLocation(event) {
-                let x = event.offsetX;
-                let y = event.offsetY;
-                document.getElementById('coordinates').innerHTML = "("+x+","+y+")";
-            }
-        </script>
+        <script src="color-picker.js"></script>
     </body>
 </html>
