Increase size and show rgb values

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
         <style>
             #gradient {
                 background-image: linear-gradient(red,yellow);
-                width: 200px;
-                height: 200px;
+                width: 300px;
+                height: 300px;
             }
             #color,
             #mouse-color {
-                width: 100px;
-                height: 100px;
+                width: 150px;
+                height: 150px;
+                background-color: red;
+                text-align: center;
+                line-height: 150px;
             }
             #color-choosers {
                 display: flex;
